updated db resources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=bmw
+spring.datasource.url=jdbc:postgresql://localhost:5432/bmwetracking_etracking
+#spring.datasource.username=bmwetracking_bmwuser
+#spring.datasource.password=@Kawish786&
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
